fix(comment-item component): prevent horizontal scroll for long strings (#207)
* fix(comment-item component): prevent horizontal scroll for long strings

* docs: add related story

* test: update visual reference

--- a/src/components/basics/CommentItem/comment-item.styles.scss
+++ b/src/components/basics/CommentItem/comment-item.styles.scss
@@ -22,6 +22,8 @@
       margin-top: $spacing-sm;
       white-space: pre;
       white-space: pre-line;
+      word-break: break-word;
+      overflow-wrap: anywhere;
     }
     &__divider{
       margin-top: $spacing-xl;
